started on context, created annotation based configuration